# 0x20bf

./: .flake8  .git-remove-file.sh  .gitignore  .pre-commit-config.yaml  0x20bf  0x20bf.py  BLOCK_TIP_HEIGHT  DIFFICULTY  GNUmakefile  README.md  SESSION_ID  TIME  configs.py  docs  index.html  logger.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: automate.yml  depends.yml  python.yml  vendors.yml  virtualenv.yml
0x20bf/: 0x20bf.py  configs.ini  configs.py  hex_message_digest.py  imports.py  logger.py  mempool_height.py  message_header.py  search_gpg_key.py  search_gpgr.py  search_gpgs.py  time_functions.py  touch_block_time.py  tweet_block_time.py  twitter.ini  twitter_api_keys.py
0x20bf/depends/: .gitignore
0x20bf/depends/gnupg/: gnupg.py  setup.py  test_gnupg.py
0x20bf/depends/gnupg/python_gnupg.egg-info/: PKG-INFO  SOURCES.txt
0x20bf/sources/: .gitignore  MAKE.md
0x20bf/tests/: test_message_header.py  test_with_pytest.py
depends/: .gitignore
depends/gnupg/: gnupg.py
depends/gnupg/docs/: conf.py
depends/legit/: GNUmakefile
depends/seeder/: Makefile
gpg-msgs/: message_to_randy.txt.gpg  randy_msg2.txt.gpg
python/: 0x20bf.py  configs.py  imports.py  logger.py  mempool_height.py  time_functions.py  tweet_block_time.py  twitter_api_keys.py  unix_time.py
scripts/: initialize
sources/: COMMANDS.md  CONTRIBUTING.md  FOOTER.md  GETTING_STARTED.md  HEADER.md  MAKE.md  PROTOCOL.md
tests/: 0x20bf  py.test  test.py  test_0x20bf.py  test_numbers.py  test_primes.py
vendors/legit/: README.md  TIME  make-legit.sh
(+4 files in other folders)
